--- a/course_project/Views/Machines/Delete.cshtml
+++ b/course_project/Views/Machines/Delete.cshtml
@@ -29,11 +29,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Guild.nameGuild)
+            @Html.DisplayNameFor(model => model.Guild.id_guild)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Guild.nameGuild)
+            @Html.DisplayFor(model => model.Guild.id_guild)
         </dd>
 
     </dl>
