--- a/course_project/Views/Machines/Index.cshtml
+++ b/course_project/Views/Machines/Index.cshtml
@@ -1,46 +1,91 @@
 ﻿@model IEnumerable<course_project.Models.Machine>
-
+@using course_project.Models;
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Machines";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    Pager pager = new Pager();
+    int pageNo = 0;
+    if (ViewBag.Pager != null)
+    {
+        pager = ViewBag.Pager;
+        pageNo = pager.CurrentPage;
+    }
 }
 
-<h2>Index</h2>
+<h2 class="mt-4">Machine list</h2>
+<a class="btn btn-outline-primary mt-3" href="Machines/Create">Add new guild</a>
+<div class="container">
+    @if (pager.TotalPages > 0)
+    {
+        <ul class="pagination justify-content-end">
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
+            @if (pager.CurrentPage > 1)
+            {
+                <li class="page-item">
+                    <a class="page-link" href="?pg=1">First</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="?pg=@(pager.CurrentPage - 1)">Previous</a>
+                </li>
+            }
+
+            @for (var pge = pager.StartPage; pge <= pager.EndPage; pge++)
+            {
+                <li class="page-item @(pge == pager.CurrentPage ? "active" : "")">
+                    <a class="page-link" href="?pg=@pge"> @pge </a>
+                </li>
+            }
+
+            @if (pager.CurrentPage < pager.TotalPages)
+            {
+                <li class="page-item">
+                    <a class="page-link" href="?pg=@(pager.CurrentPage + 1)">Next</a>
+                </li>
+                <li>
+                    <a class="page-link" href="?pg=@(pager.TotalPages)">Last</a>
+                </li>
+            }
+        </ul>
+    }
+</div>
+<table class="table mt-3">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.firmMach)
+            Id of guild
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.timeProcessing)
+            Id of machine
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Guild.nameGuild)
+            Firm
+        </th>
+        <th>
+            Time of processing
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.firmMach)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.timeProcessing)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Guild.nameGuild)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id_mach }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id_mach }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id_mach })
-        </td>
-    </tr>
-}
-
+    @foreach (var item in Model)
+    {
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.fk_id_guild)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.id_mach)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.firmMach)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.timeProcessing)
+    </td>
+    <td style="text-align: right">
+        @{var id = item.id_mach;}
+        <a class="btn btn-warning" href="Machines/Edit/@id">Edit</a>
+        <a class="btn btn-info" href="Machines/Details/@id">Info</a>
+        <a class="btn btn-danger" href="Machines/Delete/@id">Delete</a>
+    </td>
+</tr>
+    }
 </table>
