--- a/course_project/Views/Machines/Index.cshtml
+++ b/course_project/Views/Machines/Index.cshtml
@@ -82,9 +82,9 @@
     </td>
     <td style="text-align: right">
         @{var id = item.id_mach;}
-        <a class="btn btn-warning" href="Machines/Edit/@id">Edit</a>
-        <a class="btn btn-info" href="Machines/Details/@id">Info</a>
-        <a class="btn btn-danger" href="Machines/Delete/@id">Delete</a>
+        <a class="btn btn-outline-secondary" href="Machines/Edit/@id">Edit</a>
+        <a class="btn btn-outline-info" href="Machines/Details/@id">Info</a>
+        <a class="btn btn-outline-danger" href="Machines/Delete/@id">Delete</a>
     </td>
 </tr>
     }
