--- a/course_project/Views/Modifications/Index.cshtml
+++ b/course_project/Views/Modifications/Index.cshtml
@@ -70,9 +70,9 @@
             </td>
             <td style="text-align: right">
                 @{var id = item.id_mod;}
-                <a class="btn btn-warning" href="Modifications/Edit/@id">Edit</a>
-                <a class="btn btn-info" href="Modifications/Details/@id">Info</a>
-                <a class="btn btn-danger" href="Modifications/Delete/@id">Delete</a>
+                <a class="btn btn-outline-secondary" href="Modifications/Edit/@id">Edit</a>
+                <a class="btn btn-outline-info" href="Modifications/Details/@id">Info</a>
+                <a class="btn btn-outline-danger" href="Modifications/Delete/@id">Delete</a>
             </td>
         </tr>
     }
