--- a/course_project/Views/Parts/Index.cshtml
+++ b/course_project/Views/Parts/Index.cshtml
@@ -70,9 +70,9 @@
             </td>
             <td style="text-align: right">
                 @{var id = item.id_part;}
-                <a class="btn btn-warning" href="Parts/Edit/@id">Edit</a>
-                <a class="btn btn-info" href="Parts/Details/@id">Info</a>
-                <a class="btn btn-danger" href="Parts/Delete/@id">Delete</a>
+                <a class="btn btn-outline-secondary" href="Parts/Edit/@id">Edit</a>
+                <a class="btn btn-outline-info" href="Parts/Details/@id">Info</a>
+                <a class="btn btn-outline-danger" href="Parts/Delete/@id">Delete</a>
             </td>
         </tr>
     }
