--- a/course_project/Views/Machines/Delete.cshtml
+++ b/course_project/Views/Machines/Delete.cshtml
@@ -11,6 +11,8 @@
 <div>
     <h4>Machine</h4>
     <hr />
+    @Html.AntiForgeryToken()
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.firmMach)
@@ -38,7 +40,8 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
