--- a/course_project/Views/Shared/_Layout.cshtml
+++ b/course_project/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body>
+<body style="background: linear-gradient(45deg, #EECFBA, #C5DDE8);">
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #665e61;">
         <div class="container col-8" style="font-size: 1.5rem;">
             <a class="navbar-brand"><i class="fas fa-cogs"></i></a>
