--- a/course_project/Views/Machines/Index.cshtml
+++ b/course_project/Views/Machines/Index.cshtml
@@ -13,7 +13,7 @@
 }
 
 <h2 class="mt-4">Machine list</h2>
-<a class="btn btn-outline-primary mt-3" href="Machines/Create">Add new guild</a>
+<a class="btn btn-outline-primary mt-3" href="Machines/Create">Add new machine</a>
 <div class="container">
     @if (pager.TotalPages > 0)
     {
