--- a/course_project/Views/Guilds/Edit.cshtml
+++ b/course_project/Views/Guilds/Edit.cshtml
@@ -11,7 +11,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-horizontal">
         <h4>Guild</h4>
         <hr />
